# ToyCV

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  ToyCV.cpp  ToyCV.h  config.h.in  cpconfig.h.in
src/: CMakeLists.txt  bmp.cpp  bmp.h  config.h  error.cuh  funcs.cu  funcs.h  im.hpp  img.hpp  ops.hpp  toycv.cpp  toycv.h  types.h
