SET(PORJ_NAME toycv)
SET(LIB_SRC toycv.cpp bmp.cpp)
SET(LIB_HEAD toycv.h bmp.h)

SET(OBJ_NAME ${PORJ_NAME}_obj)
ADD_LIBRARY(${OBJ_NAME} OBJECT ${LIB_SRC})
# 构建动态库
ADD_LIBRARY(${PORJ_NAME} SHARED $<TARGET_OBJECTS:${OBJ_NAME}>)
# 构建静态库
SET(STATIC_NAME ${PORJ_NAME}_static)
ADD_LIBRARY(${STATIC_NAME} STATIC $<TARGET_OBJECTS:${OBJ_NAME}>)
# SET_TARGET_PROPERTIES(${STATIC_NAME} PROPERTIES OUTPUT_NAME ${PORJ_NAME})

# 安装
INSTALL(TARGETS ${PORJ_NAME} ${STATIC_NAME}
	RUNTIME DESTINATION lib
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib
)
INSTALL(FILES ${LIB_HEAD} DESTINATION "include/toycv")